[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "grid_world"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "twisterl",
]

[tool.setuptools]
packages = ["grid_world"]

[tool.maturin]
features = ["pyo3/extension-module"]
profile = "release"
module-name = "twisterl.grid_world"
